fixed horizontal scroll

--- a/BlogAnime/view/css/style.css
+++ b/BlogAnime/view/css/style.css
@@ -88,12 +88,11 @@
     }
     #footer{
         position: flex;
-        bottom: 0px;
+        bottom: 0%;
         left: 0px;
         width: 100%;
         margin-bottom: 0px;
         display: flex;
-        border: inset #000 1px;
         flex-direction: column;
         justify-content: space-around;
         background-color: gray;
@@ -294,6 +293,7 @@
 
 
     .mobileNavbar {
+        z-index: 0;
         padding: 15px;
         display: flex;
         align-items: center;
